--- a/Core_Proje/Views/Shared/Components/FeatureStatistics/Default.cshtml
+++ b/Core_Proje/Views/Shared/Components/FeatureStatistics/Default.cshtml
@@ -5,17 +5,17 @@
                 <div class="row">
                     <div class="col-9">
                         <div class="d-flex align-items-center align-self-start">
-                            <h3 class="mb-0">$12.34</h3>
-                            <p class="text-success ml-2 mb-0 font-weight-medium">+3.5%</p>
+                            <h3 class="mb-0">@ViewBag.c1</h3>
+                            
                         </div>
                     </div>
                     <div class="col-3">
                         <div class="icon icon-box-success ">
-                            <span class="mdi mdi-arrow-top-right icon-item"></span>
+                            <span class="mdi mdi-laptop-chromebook"></span>
                         </div>
                     </div>
                 </div>
-                <h6 class="text-muted font-weight-normal">Deneme growth</h6>
+                <h6 class="text-muted font-weight-normal">Yetenek Sayısı</h6>
             </div>
         </div>
     </div>
@@ -25,37 +25,17 @@
                 <div class="row">
                     <div class="col-9">
                         <div class="d-flex align-items-center align-self-start">
-                            <h3 class="mb-0">$17.34</h3>
-                            <p class="text-success ml-2 mb-0 font-weight-medium">+11%</p>
-                        </div>
-                    </div>
-                    <div class="col-3">
-                        <div class="icon icon-box-success">
-                            <span class="mdi mdi-arrow-top-right icon-item"></span>
-                        </div>
-                    </div>
-                </div>
-                <h6 class="text-muted font-weight-normal">Revenue current</h6>
-            </div>
-        </div>
-    </div>
-    <div class="col-xl-3 col-sm-6 grid-margin stretch-card">
-        <div class="card">
-            <div class="card-body">
-                <div class="row">
-                    <div class="col-9">
-                        <div class="d-flex align-items-center align-self-start">
-                            <h3 class="mb-0">$12.34</h3>
-                            <p class="text-danger ml-2 mb-0 font-weight-medium">-2.4%</p>
+                            <h3 class="mb-0">@ViewBag.c2</h3>
+                            
                         </div>
                     </div>
                     <div class="col-3">
                         <div class="icon icon-box-danger">
-                            <span class="mdi mdi-arrow-bottom-left icon-item"></span>
+                            <span class="mdi mdi-email"></span>
                         </div>
                     </div>
                 </div>
-                <h6 class="text-muted font-weight-normal">Daily Income</h6>
+                <h6 class="text-muted font-weight-normal">Okunmamış Mesaj Sayısı</h6>
             </div>
         </div>
     </div>
@@ -65,17 +45,37 @@
                 <div class="row">
                     <div class="col-9">
                         <div class="d-flex align-items-center align-self-start">
-                            <h3 class="mb-0">$31.53</h3>
-                            <p class="text-success ml-2 mb-0 font-weight-medium">+3.5%</p>
+                            <h3 class="mb-0">@ViewBag.c3</h3>
+                            
+                        </div>
+                    </div>
+                    <div class="col-3">
+                        <div class="icon icon-box-success">
+                            <span class="mdi mdi-email-open"></span>
+                        </div>
+                    </div>
+                </div>
+                <h6 class="text-muted font-weight-normal">Okunmuş Mesaj Sayısı</h6>
+            </div>
+        </div>
+    </div>
+    <div class="col-xl-3 col-sm-6 grid-margin stretch-card">
+        <div class="card">
+            <div class="card-body">
+                <div class="row">
+                    <div class="col-9">
+                        <div class="d-flex align-items-center align-self-start">
+                            <h3 class="mb-0">@ViewBag.c4</h3>
+                            
                         </div>
                     </div>
                     <div class="col-3">
                         <div class="icon icon-box-success ">
-                            <span class="mdi mdi-arrow-top-right icon-item"></span>
+                            <span class="mdi mdi-chart-bar"></span>
                         </div>
                     </div>
                 </div>
-                <h6 class="text-muted font-weight-normal">Expense current</h6>
+                <h6 class="text-muted font-weight-normal">Deneyim Sayısı</h6>
             </div>
         </div>
     </div>
