--- a/Core_Proje/Views/Shared/Components/AdminNavbarMessageList/Default.cshtml
+++ b/Core_Proje/Views/Shared/Components/AdminNavbarMessageList/Default.cshtml
@@ -1,4 +1,5 @@
-﻿
+﻿@using EntityLayer.Concrete
+@model List<WriterMessage>
 
 <li class="nav-item dropdown border-left">
     <a class="nav-link count-indicator dropdown-toggle" id="messageDropdown" href="#" data-toggle="dropdown" aria-expanded="false">
@@ -6,18 +7,22 @@
         <span class="count bg-success"></span>
     </a>
     <div class="dropdown-menu dropdown-menu-right navbar-dropdown preview-list" aria-labelledby="messageDropdown">
-        <h6 class="p-3 mb-0">Gelen Kutusu</h6>
+        <h6 class="p-3 mb-0">Son Mesajlar</h6>
         <div class="dropdown-divider"></div>
-        <a class="dropdown-item preview-item">
-            <div class="preview-thumbnail">
-                <img src="~/corona-free-dark-bootstrap-admin-template-1.0.0/template/assets/images/faces/face4.jpg" alt="image" class="rounded-circle profile-pic">
-            </div>
-            <div class="preview-item-content">
-                <p class="preview-subject ellipsis mb-1">Mark send you a message</p>
-                <p class="text-muted mb-0"> 1 Minutes ago </p>
-            </div>
-        </a>
-        
+        @foreach (var item in Model)
+        {
+            <a class="dropdown-item preview-item" href="/AdminMessage/ReceiverMessageDetails/@item.WriterMessageId">
+                <div class="preview-thumbnail">
+                    <img src="~/corona-free-dark-bootstrap-admin-template-1.0.0/template/assets/images/faces/face4.jpg" alt="image" class="rounded-circle profile-pic">
+                </div>
+                <div class="preview-item-content">
+                    <p class="preview-subject ellipsis mb-1">"@item.SenderName" bir mesaj gönderdi </p>
+                    <p class="text-muted mb-0"> @(((DateTime)item.Date).ToString("dd-MMM-yyyy")) </p>
+                </div>
+            </a>
+        }
+
+
         <div class="dropdown-divider"></div>
         <p class="p-3 mb-0 text-center">4 new messages</p>
     </div>
